1.删除上下线日志提醒 2.修正报警视频未弹出

--- a/App.config
+++ b/App.config
@@ -4,20 +4,20 @@
     <supportedRuntime version="v4.0" />
   </startup>
   <appSettings>
-    <add key="WebMapServerURL" value="http://aodong.3322.org:8100//Web/index.html" />
-    <add key="WebMapServerURL2" value="http://aodong.3322.org:8100/Web/subMap.html" />
-    <add key="WebMapFileURL" value="http://aodong.3322.org:8100/Web/ImgData" />
-    <add key="MDSServerURL" value="http://aodong.3322.org:8100/MDSService/SI" />
-    <add key="WebServerURL" value="http://aodong.3322.org:8100/" />
-    <add key="VideoServerIP" value="222.76.112.14" /><!--220.160.67.84-->
-    <add key="UserId" value="zxm" />
+    <add key="WebMapServerURL" value="http://emax.vicp.cc:8100//Web/index.html" />
+    <add key="WebMapServerURL2" value="http://emax.vicp.cc:8100/Web/subMap.html" />
+    <add key="WebMapFileURL" value="http://emax.vicp.cc:8100/Web/ImgData" />
+    <add key="MDSServerURL" value="http://emax.vicp.cc:8100/MDSService/SI" />
+    <add key="WebServerURL" value="http://emax.vicp.cc:8100/" />
+    <add key="VideoServerIP" value="emax.vicp.cc" /><!--223.87.191.7-->
+    <add key="UserId" value="zpy" />
     <add key="Pwd" value="000000" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="City" value="福州" />
     <add key="ListenCOM" value="true" />
-    <add key="OpenAlarmVideo" value="false" />
+    <add key="OpenAlarmVideo" value="true" />
     <add key="CheckAlarmVideoTime" value="10000" />
-    <add key="AutoLoadNodeStatus" value="false" />
+    <add key="AutoLoadNodeStatus" value="true" />
     <add key="LoginTitle" value="英码-登录" />
     <add key="MainTitle" value="英码报警中心Map" />
     <add key="ImageFile" value="images" />
